--- a/assets/bootstrap/css/font-kh.css
+++ b/assets/bootstrap/css/font-kh.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleeapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 *{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif, 'Khmer OS Battambang';
 }
 .font-Khmer-OML{
     font-family: 'Khmer OS Muol Light';
