--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
     --bs-pink: #e9157f;
-    --bs-red: #dc3546d3;
+    --bs-red: #852d35;
     --bs-orange: #fd7e14;
     --bs-yellow: #ffc107;
     --bs-green: #198754;
