--- a/assets/css/information_styles.css
+++ b/assets/css/information_styles.css
@@ -50,7 +50,7 @@
     background-image: url("../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     margin-top: 2rem;
 }
