--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -14,11 +14,10 @@
     right: 0;
     left: 0;
     z-index: 1;
-    background: rgba(84, 18, 18, 0.523);
+    background: rgba(84, 18, 18, 0.5);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    padding: 1rem 15px;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    padding: 10px 15px;
     transition: all .5s ease;
     font-family: 'Roboto', sans-serif;
 
@@ -53,14 +52,14 @@
     color: #ffec99;
 }
 
-.nav-item a {
+.nav-item>a {
     text-decoration: none;
     padding: 0 5px;
-    color: #ffec99;
+    color: #ffe066;
     font-family: 'Roboto', sans-serif;
 }
 
-.nav-item a:hover {
+.nav-item > a:hover {
     color: #ffe066;
 }
 
@@ -90,26 +89,12 @@
     display: none;
     background-color: rgba(84, 18, 18, .4);
     position: absolute;
-    top: 63px;
+    top: 50px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     transition: all .5s ease;
 }
 
-i.arrow-up {
-    position: absolute;
-    top: -21px;
-    left: -3px;
-    display: block;
-    color: rgba(84, 18, 18, .4);
-    font-size: 1.6rem;
-    transition: all .5s ease;
-}
-
-.arrow-left {
-    display: none;
-}
-
-.dropdown-content a {
+.dropdown-content > a {
     display: block;
     text-decoration: none;
     padding: 5px 55px 5px 10px;
@@ -118,7 +103,7 @@ i.arrow-up {
     color: #ffe066;
 }
 
-.dropdown-content a:hover {
+.dropdown-content > a:hover {
     background-color: rgba(86, 16, 16, 0.795);
 }
 
@@ -127,80 +112,164 @@ i.arrow-up {
     transition: all .5s ease;
 }
 
-
-
 /* slide  */
-#slider {
+
+.slide-container{
+    position: relative;
+}
+
+.image-wrapper{
     position: relative;
     width: 100%;
-    height: 575px;
-
+    height: 550px;
     overflow: hidden;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+    transition: all .5s ease;
 }
 
-#slider ul {
-    position: relative;
-    list-style: none;
-    height: 100%;
-    width: 10000%;
-    padding: 0;
-    margin: 0;
-    transition: all 750ms ease;
-    left: 0;
-}
-
-#slider ul li {
-    position: relative;
-    height: 100%;
-
-    float: left;
-}
-
-#slider ul li img {
+.image-wrapper > img{
+    position: absolute;
     width: 100%;
     height: 100%;
 }
 
-#slider #prev,
-#slider #next {
-    width: 50px;
-    line-height: 50px;
-    text-align: center;
-    color: white;
-    text-decoration: none;
+.image-wrapper > img:not(.active){
+    left: -100%;
+}
+
+.btn-container{
     position: absolute;
-    top: 50%;
+    top:45%;
+    width: 100%;
+}
+
+.btn-container > button{
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
-    font-size: 2rem;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-    transform: translateY(-50%);
-    transition: all 150ms ease;
+    font-size: 1.5rem;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
+    cursor: pointer;
+    transition: all 0.2s ease;
+    color:grey;
 }
 
-#slider #prev {
-    left: 10px;
+.btn-container > button:hover{
+    color:rgb(49,49,49);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 0 30px rgba(196,196,196,0.5);
+    background-color: transparent;
 }
 
-#slider #next {
-    right: 10px;
+.btn-container > button:first-child{
+    position:absolute;
+    z-index: 100;
+    left:25px;
 }
 
-#slider #prev:hover,
-#slider #next:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    text-shadow: 0;
+.btn-container > button:last-child{
+    position:absolute;
+    z-index: 100;
+    right:25px;
 }
 
+.dots-container {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 118px;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(50px);
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 100px;
+    padding: 5px 0;
+    gap: 0.5rem;
+  }
+  .dot {
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: all 0.2s ease-out;
+  }
+  .dot.active {
+    width: 40px;
+    border-radius: 100px;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+
+  @keyframes nextOut {
+    from {
+      left: 0%;
+    }
+    to {
+      left: -100%;
+    }
+  }
+  @keyframes nextIn {
+    from {
+      left: 100%;
+    }
+    to {
+      left: 0;
+    }
+  }
+  @keyframes prevOut {
+    from {
+      left: 0%;
+    }
+    to {
+      left: 100%;
+    }
+  }
+  @keyframes prevIn {
+    from {
+      left: -100%;
+    }
+    to {
+      left: 0%;
+    }
+  }
+  
 .bg-marquee{
-    background-color: rgb(86, 16, 16);
-    color:#eee;
-    padding:.5rem 0;
-    height: 43px;
+    background-color: rgba(86, 16, 16, 1);
 }
+
+.bg-marquee > marquee{
+    margin-top: 10px;
+    color:#eee;
+}
+
 .section-title{
-    margin:15px  0 10px 0 ;
+    display: grid;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    margin:1rem;
+}
+
+@media screen and (max-width:1100px){
+    .image-wrapper{
+        height: 465px;
+    }
+    .btn-container > button:first-child{
+        z-index: 0;
+    }
+    
+    .btn-container > button:last-child{
+        z-index:0;
+    }
+}
+
+@media screen and (max-width:980px){
+    .image-wrapper{
+        height: 400px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -214,25 +283,10 @@ i.arrow-up {
     .dropdown-content {
         position: absolute;
         left: 110px;
-        top: 8rem;
+        top: 175px;
         display: none;
         background-color: rgb(84, 18, 18);
         box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-        transition: all .5s ease;
-    }
-
-    i.arrow-up {
-        display: none;
-    }
-
-    i.arrow-left {
-        position: absolute;
-        top: -5px;
-        left: -14px;
-        display: block;
-        color: rgb(84, 18, 18);
-        ;
-        font-size: 1.6rem;
         transition: all .5s ease;
     }
 
@@ -279,5 +333,46 @@ i.arrow-up {
         display: block;
         transition: all .5s ease;
     }
+
+    .image-wrapper{
+        height: 375px;
+    }
+
+    .btn-container > button{
+        width: 30px;
+        height: 30px;
+    }
+    .btn-container > button:first-child{
+        font-size: 18px;
+    }
+    
+    .btn-container > button:last-child{
+        font-size: 18px;
+    }
+    .dots-container{
+        padding:4px 0;
+        gap: 0.3rem;
+        width: 100px;
+    }
+    .dot{
+        width: 9px;
+        height: 9px;
+    }
 }
-/* <!-- <h1></h1> --> */
+
+@media screen and (max-width:560px){
+    .image-wrapper{
+        height: 250px;
+    }
+
+}
+@media screen and (max-width:450px){
+    .image-wrapper{
+        height: 210px;
+    }
+}
+@media screen and (max-width:150px){
+    .image-wrapper{
+        height: 180px;
+    }
+}
