--- a/assets/css/information_style.css
+++ b/assets/css/information_style.css
@@ -36,6 +36,7 @@
     padding:.5rem 1.5rem;
     cursor: pointer;
     border-radius: 15px;
+    margin:.5rem 0;
 }
 .btnDetail a {
     text-decoration: none;
