--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 *{
     margin:0;
     padding:0;
@@ -33,12 +33,63 @@ ul.list-items{
 li>a{
     text-decoration: none;
     color:#e9ecef;
+    font-weight: 700;
 }
 
 li>a:hover{
     color:#f8f9fa;
 }
 
+/* Dropdown Button */
+.dropbtn {
+    cursor: pointer;
+    font-weight: 700;
+    color: #e9ecef;
+  }
+.dropbtn:hover{
+    color:#f8f9fa;
+}
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    transition: all .5s ease;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    transition: all .5s ease;
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 15px;
+    text-decoration: none;
+    display: block;
+    font-size: 10pt;
+    font-weight: 700;
+    transition: all .5s ease;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {
+    display:block;
+    right: 0;
+    transition: all .5s ease;
+}
+
+
+/* app center */
 .app-container{
     margin:1rem 10rem;
     display: flex;
@@ -116,6 +167,72 @@ div.app-box:hover span{
     .list-link>a:hover{
         color:#868e96;
     }
+  /* profile */
+  .container_profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+  }
+  .body_pofile{
+    background:transparent;
+    border-radius: 4px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    padding:1rem;
+  }
+  .profile_items{
+    display: flex;
+    padding:10px;
+    justify-content: space-evenly ;
+    align-items: center;
+    gap:1rem;
+  }
+  .profile_items > img{
+    margin:0 auto;
+    display: block;
+    width: 300px;
+    height: 300px;
+  }
+  .profile_items > h3,span{
+    text-align: left;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+  button[type="button"]{
+    padding:13px 17px;
+    margin:0 auto;
+    display: block;
+    border:1px solid #ccc;
+    outline:none;
+    border-radius: 4px;
+    font-size: 14pt;
+    color:#ccc;
+    background-color: #4c6ef5;
+    cursor: pointer;
+    transition: all .5s ease;
+  }
+  button[type="button"]:hover{
+    background-color: #3b5bdb;
+    color:#eee;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     /* Add media queries for small screens (when the height of the screen is less than 450px, add a smaller padding and font-size) */
     @media screen and (max-height: 450px) {
     .sidebar {padding-top: 15px;}
