--- a/admin/auth/css/style.css
+++ b/admin/auth/css/style.css
@@ -8,13 +8,12 @@ body{
     display: grid;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
 }
 .login {
     width: 400px;
     background-color: #ffffff;
-    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-    
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 .login h1 {
     text-align: center;
@@ -48,7 +47,7 @@ body{
 .login form input[type="button"] {
     width: 100%;
     padding: 15px;
-   margin-top: 20px;
+    margin-top: 20px;
     background-color: #3274d6;
     border: 0;
     cursor: pointer;
@@ -58,5 +57,20 @@ body{
 }
 .login form input[type="button"]:hover {
   background-color: #2868c7;
+    transition: background-color 0.2s;
+}
+.login form button[type="button"] {
+    width: 100%;
+    padding: 15px;
+    margin-top: 20px;
+    background-color: #f6bf5ad2;
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #ffffff;
+    transition: background-color 0.2s;
+}
+.login form button[type="button"]:hover {
+  background-color: #f6bf5a;
     transition: background-color 0.2s;
 }
